--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
